# RDMAwild

./: README.md
multinomial_log_reg/: CMakeLists.txt  multinomial_log_reg.cpp  multinomial_log_reg.hpp
multinomial_log_reg/applications/: CMakeLists.txt  async_mnist_log_reg.cpp  parameter_server.cpp
multinomial_log_reg/coordinator/: CMakeLists.txt  async_worker.cpp  async_worker.hpp  connection_manager.cpp  connection_manager.h  ml_sst.cpp  ml_sst.hpp  sst.h  sst_impl.h  tcp.cpp  verbs.cpp
multinomial_log_reg/utils/: CMakeLists.txt  a.out  cnpy.cpp  cnpy.hpp  ml_stat.cpp  ml_stat.hpp  numpy_reader.cpp  numpy_reader.hpp  utils.cpp  utils.hpp
